%% Class diagram — Bus management: vehicles, pickup points, routes, schedules, crew assignment
%% Controllers: Bus, BusStation, BusRoute, BusSchedule, BusAssignment

classDiagram
  direction TB

  namespace Fleet {
    class Bus {
      +Id LicensePlate Capacity Status
      +BusNumber ImageUrl Color BusType
    }
    class BusDamageReport {
      +Id BusId Title Description Status
      +ReportedAt ReportedByUserId
    }
  }

  namespace Network {
    class BusStation {
      +Id Name Address Latitude Longitude IsEnabled
    }
    class Campus {
      +Id Name Code
    }
    class BusRoute {
      +Id Name CampusId IsEnabled
    }
    class BusRouteStation {
      +Id RouteId StationId OrderIndex
    }
    class BusSchedule {
      +Id BusId RouteId StartDate EndDate
      +StartTime EndTime DayOfWeek ShiftType IsActive
    }
  }

  namespace Crew {
    class BusAssignment {
      +Id BusId DriverId TeacherId ActiveDate
    }
    class User {
      +Id Email FullName RoleId
    }
  }

  Campus "1" --> "*" BusRoute
  Bus "1" --> "*" BusDamageReport
  Bus "1" --> "*" BusSchedule
  BusRoute "1" --> "*" BusRouteStation
  BusStation "1" --> "*" BusRouteStation : station
  BusRoute "1" --> "*" BusSchedule : route
  Bus "1" --> "*" BusAssignment
  User "1" --> "*" BusAssignment : Driver
  User "1" --> "*" BusAssignment : Teacher
